crates/uitest/fixtures/ty/trait_impl/impl_method_param_mismatch.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/trait_impl/impl_method_param_mismatch.fe
---
error[6-0003]: method type parameter count mismatch
   ┌─ impl_method_param_mismatch.fe:10:8
   │
10 │     fn foo<T>(t: T) {}
   │        ^^^ expected 2 type parameters, but 1 given

error[6-0004]: method type parameter kind mismatch
  ┌─ impl_method_param_mismatch.fe:6:15
  │
6 │     fn foo<T, U>(t: T, u: U) {}
  │               ^ expected `(* -> *)` kind, but the given type has `*` kind
